--- a/SITE/html/login_other.html
+++ b/SITE/html/login_other.html
@@ -5,12 +5,12 @@
       <meta charset="UTF-8">
       <title>[PC] Gestion Habillement Vendée</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="..\static\styles.css">
+      <link rel="stylesheet" href="..\css\styles.css">
 <header>
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\static\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="..\data\images\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
@@ -23,7 +23,7 @@
 
 <form action="authentification.php" method="post">
     <div class="imgcontainer">
-      <img src="..\static\logo_carre_transparent_1.png" alt="Avatar" class="avatar">
+      <img src="..\data\logo_carre_transparent_1.png" alt="Avatar" class="avatar">
     </div>
   
     <div class="container">
