--- a/SITE/html/main.html
+++ b/SITE/html/main.html
@@ -5,12 +5,12 @@
       <meta charset="UTF-8">
       <title>[PC] Gestion Habillement Vendée</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="..\static\styles.css">
+      <link rel="stylesheet" href="..\css\styles.css">
 <header>
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
