UPDATE du readme et des scrennshots

--- a/SITE/html/contact.html
+++ b/SITE/html/contact.html
@@ -9,7 +9,7 @@
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\\dataimages\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="main.html">Accueil</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
