--- a/SITE/html/login_other.html
+++ b/SITE/html/login_other.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\data\images\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
@@ -23,7 +23,7 @@
 
 <form action="authentification.php" method="post">
     <div class="imgcontainer">
-      <img src="..\data\logo_carre_transparent_1.png" alt="Avatar" class="avatar">
+      <img src="..\data\images\logos\logo_carre_transparent_1.png" alt="Avatar" class="avatar">
     </div>
   
     <div class="container">
