Uptd DB + 1/2 db mgmt funct + Uptd Header/Footers

--- a/SITE/html/login.html
+++ b/SITE/html/login.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="logo">
             <ul>
-                <a href="login.html"><img src="{{url_for('static', filename='logo_carre_transparent_1.png')}}" alt="Logo de l'association"></a>
+                <a href="login.html"><img src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <h1 id="titre_login"> ENREGISTREMENT HABILLEMENT - PROTECTION CIVILE SECTEUR VENDEE</h1>
             </ul>
         </div>
@@ -35,8 +35,10 @@
           </div>
       </div>
   </main>
-
-
-
 </body>
+
+
+  <footer>
+    <p id="copyright">&copy;  Protection Civile de Vendée</p>
+</footer>
 </html>
