--- a/SITE/html/login_failed.html
+++ b/SITE/html/login_failed.html
@@ -22,6 +22,6 @@
 <h2 style="font-size: 70 px;"> Vous serez redirigé dans quelques secondes...</h2>
 
 <footer>
-    <p id="copyright">&copy;  Protection Civile Secteur Vendée</p>
+    <p id="copyright">&copy;  Protection Civile de Vendée</p>
 </footer>
 </html>
