--- a/SITE/html/login_other.html
+++ b/SITE/html/login_other.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -11,9 +10,6 @@
         <div class="logo">
             <ul>
                 <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
-                <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -47,6 +43,6 @@
   
 
 <footer>
-    <p id="copyright">&copy;  Protections Civile Secteur Vendée</p>
+    <p id="copyright">&copy;  Protection Civile de Vendée</p>
 </footer>
 </html>
