--- a/SITE/html/main.html
+++ b/SITE/html/main.html
@@ -12,8 +12,6 @@
             <ul>
                 <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -26,24 +24,19 @@
       <p>Notifier un emprunt d'un vêtement pour une mission.</p>
     </section>
 
-    <section id="apropos">
-      <h2>À propos de nous</h2>
-      <p>Ici, vous pouvez ajouter des informations sur l'association.</p>
-    </section>
-
     <section id="services">
-      <h2>Nos services</h2>
-      <p>Liste des services fournis par l'association.</p>
+      <h2><a href="https://portail.protection-civile.org/realms/fnpc/account/#/applications">Accéder à E-Protec</h2>
+      <p>Se rendre sur la page de E-Protec ( vous fera quitter ce site )</a></p>
     </section>
 
     <section id="contact">
-      <h2><a href="contact.html">Contact</a></h2>
-      <p>Contacts en cas de problèmes avec le site.</p>
+      <h2><a href="contact.html">Contact</h2>
+      <p>Contacts en cas de problèmes avec le site.</a></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy;  Protection Civile Secteur Vendée</p>
+    <p>&copy;  Protection Civile de Vendée</p>
   </footer>
 </body>
 </html>
