--- a/SITE/html/type.html
+++ b/SITE/html/type.html
@@ -12,8 +12,6 @@
             <ul>
                 <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -23,6 +21,6 @@
 
 
 <footer>
-    <p id="copyright">&copy;  Protections Civile Secteur Vendée</p>
+    <p id="copyright">&copy;  Protection Civile de Vendée</p>
 </footer>
 </html>
