--- a/SITE/html/contact.html
+++ b/SITE/html/contact.html
@@ -11,8 +11,6 @@
             <ul>
                 <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="main.html">Accueil</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#apropos" >À propos</a></li>
-                <li id="boutons_accueil" style="float: left;"><a href="#services">Services</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -61,5 +59,7 @@
             </div>
         </div>
     </main>
-    
+    <footer>
+        <p id="copyright">&copy;  Protection Civile de Vendée</p>
+    </footer>    
 </html>
