--- a/SITE/html/login_other.html
+++ b/SITE/html/login_other.html
@@ -29,14 +29,14 @@
       <label for="psw"><b>Mot de passe</b></label>
       <input type="password" placeholder="Entrez votre mot de passe" name="psw" required>
   
-      <button type="submit">Connexion</button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Se rappeler de moi
-      </label>
+      <form method="post">
+        <button type="submit">Connexion</button>
+
+      </form>      
     </div>
   
     <div class="container" style="background-color:#f1f1f1">
-      <button type="button" class="cancelbtn">Cancel</button>
+      <button type="button" class="cancelbtn">Annuler</button>
       <span class="psw"><a href="#">Mot de passe oublié ?</a></span>
     </div>
   </form>
