--- a/SITE/html/enregistrements.html
+++ b/SITE/html/enregistrements.html
@@ -11,7 +11,7 @@
         <div class="logo">
             <ul>
                 <a href="login.html"><img src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
-                <h1 id="titre_login"> ENREGISTREMENT HABILLEMENT - PROTECTION CIVILE SECTEUR VENDEE</h1>
+                <h1 id="titre_login"> ENREGISTREMENT HABILLEMENT - PROTECTION CIVILE DE VENDEE</h1>
             </ul>
         </div>
     </nav>
