Verif register page

--- a/SITE/html/enregistrements.html
+++ b/SITE/html/enregistrements.html
@@ -125,6 +125,7 @@
           <li>
             <label for="affectation">Affectation&nbsp;:</label>
             <select id="affectation" name="affectation">
+              <option value="null" disabled="yes" selected="yes">Sélectionnez une option</option>
               <option value="85MTGU">85 MTGU - Terres de Montaigu</option>
               <option value="85StEBois">85 St E Bois - Saint Etienne du Bois</option>
             </select>
