ACTUALISATION AVEC LE VPS

--- a/SITE/html/contact.html
+++ b/SITE/html/contact.html
@@ -4,12 +4,12 @@
       <meta charset="UTF-8">
       <title>[PC] Gestion Habillement Vendée</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="..\css\styles.css">
+      <link rel="stylesheet" href="styles.css">
 <header>
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="main.html">Accueil</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
@@ -29,7 +29,7 @@
     <main class="contact">
         <div class="contact-card">
             <div class="profile-image">
-                <img src="..\data\images\profils\photo_r_lothore.jpg" alt="Photo de la personne">
+                <img src="images\profils\photo_r_lothore.jpg" alt="Photo de la personne">
             </div>
             
             <div class="contact-info">
