--- a/SITE/html/login_other.html
+++ b/SITE/html/login_other.html
@@ -9,7 +9,7 @@
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -19,7 +19,7 @@
 
 <form action="authentification.php" method="post">
     <div class="imgcontainer">
-      <img src="..\data\images\logos\logo_carre_transparent_1.png" alt="Avatar" class="avatar">
+      <img src="images\logos\logo_carre_transparent_1.png" alt="Avatar" class="avatar">
     </div>
   
     <div class="container">
@@ -46,4 +46,3 @@
     <p id="copyright">&copy;  Protection Civile de Vendée</p>
 </footer>
 </html>
-*
