--- a/SITE/html/main.html
+++ b/SITE/html/main.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="logo">
             <ul>
-                <a href="main.html"><img style="float: left;" src="..\data\images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
+                <a href="main.html"><img style="float: left;" src="images\logos\logo_carre_transparent_1.png" alt="Logo de l'association"></a>
                 <li id="boutons_accueil" style="float: left;"><a href="#accueil">Accueil</a></li>
                 <li id="boutons_accueil" style="float: left;"><a href="contact.html">Contact</a></li>
             </ul>
